# Web-Request-Logger

./: Cargo.toml  README.md  log.txt
migrations/: 0001_HttpRequestLog.sql
src/: http_request.rs  main.rs
