[package]
name = "web_request_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
tokio = {version = "1.33.0", features = ["full"]}
sqlx = {version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "ipnetwork"]}